--- a/index.html
+++ b/index.html
@@ -4,67 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        .h1 {
-            text-align: center;
-        }
-        .calculator {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .display {
-            width: 290px;
-            height: 50px;
-            background-color: #525252;
-            color: #fff;
-            text-align: right;
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            font-size: 24px;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-        .buttons {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-        }
-        .button {
-            padding: 20px;
-            background-color: #f9f9f9;
-            border: none;
-            border-radius: 5px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .button:hover {
-            background-color: #ddd;
-        }
-        .button.operator {
-            background-color: #fb3cde;
-            color: #fff;
-        }
-        .button.operator:hover {
-            background-color: #fb3cde;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="background"></div>
+    <h1>Calculadora</h1>
     <div class="calculator">
-        
         <div class="display" id="display">0</div>
         <div class="buttons">
             <button class="button" onclick="appendNumber('7')">7</button>
@@ -80,74 +25,13 @@
             <button class="button" onclick="appendNumber('3')">3</button>
             <button class="button operator" onclick="chooseOperation('-')">-</button>
             <button class="button" onclick="appendNumber('0')">0</button>
-            <button class="button" onclick="clearDisplay()">C</button>
-            <button class="button" onclick="calculate()">=</button>
+            <button class="button" onclick="appendNumber('.')">.</button>
+            <button class="button clear" onclick="clearDisplay()">C</button>
             <button class="button operator" onclick="chooseOperation('+')">+</button>
+            <button class="button equal" onclick="calculate()">=</button>
         </div>
     </div>
 
-    <script>
-        let display = document.getElementById('display');
-        let currentOperand = '';
-        let previousOperand = '';
-        let operation = undefined;
-
-        function appendNumber(number) {
-            if (currentOperand.includes('.') && number === '.') return;
-            currentOperand = currentOperand.toString() + number.toString();
-            updateDisplay();
-        }
-
-        function chooseOperation(op) {
-            if (currentOperand === '') return;
-            if (previousOperand !== '') {
-                calculate();
-            }
-            operation = op;
-            previousOperand = currentOperand;
-            currentOperand = '';
-            updateDisplay();
-        }
-
-        function calculate() {
-            let result;
-            const prev = parseFloat(previousOperand);
-            const current = parseFloat(currentOperand);
-            if (isNaN(prev) || isNaN(current)) return;
-            switch (operation) {
-                case '+':
-                    result = prev + current;
-                    break;
-                case '-':
-                    result = prev - current;
-                    break;
-                case '*':
-                    result = prev * current;
-                    break;
-                case '/':
-                    result = prev / current;
-                    break;
-                default:
-                    return;
-            }
-            currentOperand = result;
-            operation = undefined;
-            previousOperand = '';
-            updateDisplay();
-        }
-
-        function clearDisplay() {
-            currentOperand = '';
-            previousOperand = '';
-            operation = undefined;
-            updateDisplay();
-        }
-
-        function updateDisplay() {
-            display.innerText = `${previousOperand} ${operation || ''} ${currentOperand}`;
-        }
-
-        clearDisplay();
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
